# ezygram

./: README.md  pyproject.toml
easygram/: __init__.py  api.py  bot.py
ezygram/: bot.py
